@@ -3,6 +3,7 @@
 - Weather widget can focus
 - Option to show program times instead of genre in PVR guide
 - Hide info for single widget if no label available.
+- Reconfigure addon info dialog
 
 0.9.30
 Stop prompt for installing plugins for info/search lists if disabled/not-installed
